--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.8.2",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0",
-    "vue3-datepicker": "^0.4.0"
+    "vue3-datepicker": "^0.4.0",
+    "vuetify": "^3.7.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
