--- a/backend/flightplanner/src/main/resources/application.properties
+++ b/backend/flightplanner/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=docker
+spring.datasource.username=proovi
+spring.datasource.password=too
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
