--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: postgres:17
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=docker
+      - POSTGRES_USER=proovi
+      - POSTGRES_PASSWORD=too
     ports:
       - '5432:5432'
     restart: always
