--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "animejs": "^3.2.2",
     "axios": "^1.8.2",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
+    "vue-cal": "^4.10.2",
     "vue-router": "^4.5.0",
     "vue3-datepicker": "^0.4.0",
     "vuetify": "^3.7.16"
